Fixed alignment and removed unnecessary lines of code

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,4 +1,6 @@
-.homepage-size {
+.homepage-image {
+    display: block;
+    margin: 0 auto;
     width: 600px;
     height: 400px;
 }
@@ -6,23 +8,28 @@
 .homepage {
     width: 100%;
     display: flex;
-    justify-content: space-between; /* Pushes elements to opposite sides */
-    align-items: center; /* Aligns items vertically */
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.homepage-title {
+    text-align: center;
+    margin: 5px;
 }
 
 .account-stuff {
-    text-align: right;
+    position: absolute;
+    right: 0;
 }
 
 .btn-sign-in,
 .btn-sign-up {
     color: black;
-    text-decoration: none;
+    text-decoration: none; /* "none" removes underline for links */
     border-radius: 12px;
     font-size: 20px;
     padding: 5px 15px;
-    text-align: center;
-    display: inline-block;
 }
 
 .btn-sign-in:visited,
@@ -46,19 +53,16 @@
 
 /* W3 CSS Credits: */
 
+.menu-button {
+    position: absolute;
+    left: 0;
+}
+
 .menu-button button{
-    font-size: 28px;
-    display: inline-block;
+    font-size: 30px;
     border: none;
-    padding: 4px 8px;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    color: inherit;
     background-color: inherit;
-    text-align: center;
     cursor: pointer;
-    white-space: nowrap
 }
 
 .menu-button button:hover {
